fix scrollbar - add crossplatform plugin

--- a/css/screen.css
+++ b/css/screen.css
@@ -39,7 +39,7 @@ table { border-spacing: 0; border-collapse: collapse; width: 100%; }
 form { margin-top: -10px; position: relative; }
 form input { padding-left: 20px; width: 280px; height: 50px; background: #ffffff; display: block; margin: auto auto 10px; -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px; -moz-background-clip: padding; -o-background-clip: padding-box; -webkit-background-clip: padding; background-clip: padding-box; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; font-size: 18px; border: 2px solid #77a969; }
 form .radio-toolbar { position: absolute; top: -168px; left: -240px; width: 140px; height: 70px; }
-form .radio-toolbar:after { position: absolute; content: ""; background: url('../img/icons-s42ad3593b7.png') 0 -51px no-repeat; width: 20px; height: 30px; bottom: -33px; left: 0; }
+form .radio-toolbar:after { position: absolute; content: ""; background: url('../img/icons-sef19b2065e.png') 0 -51px no-repeat; width: 20px; height: 30px; bottom: -33px; left: 0; }
 form .radio-toolbar p { text-align: left; font-family: "georgiaitalic"; font-size: 16px; line-height: 1em; margin-bottom: 5px; margin-left: 10px; display: inline-block; color: #ffffff; }
 form .radio-toolbar label { margin-left: 11px; }
 form .radio-toolbar input[type='radio'] { display: none; }
@@ -88,6 +88,12 @@ header .header_in, .scrollMenu .header_in, .bottom .header_in, header .header__m
 
 .title--black { font-family: "pf_highway_sans_probold"; font-weight: normal; font-style: normal; font-size: 60px; text-align: center; text-transform: uppercase; line-height: 1em; }
 
+.ps-scrollbar-x-rail { display: none !important; }
+
+.ps-scrollbar-y-rail { opacity: 1 !important; -moz-border-radius: 0; -webkit-border-radius: 0; border-radius: 0; border-radius: 0px !important; background: #ffffff !important; width: 2px !important; color: #fff !important; }
+
+.ps-scrollbar-y { background: #000 !important; width: 4px !important; -moz-border-radius: 0; -webkit-border-radius: 0; border-radius: 0; border-radius: 0px !important; }
+
 header, .scrollMenu, .bottom { background: url(../img/header_bg.jpg) center center no-repeat; -moz-background-size: cover; -o-background-size: cover; -webkit-background-size: cover; background-size: cover; height: 990px; position: relative; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 header .header_in, .scrollMenu .header_in, .bottom .header_in { *zoom: 1; position: relative; padding-top: 55px; }
 header .header_in:after, .scrollMenu .header_in:after, .bottom .header_in:after { content: " "; display: table; clear: both; }
@@ -134,10 +140,7 @@ header .header__main--main .header__right:after, .scrollMenu .header__main--main
 .specs .specs_in:after { content: " "; display: table; clear: both; }
 .specs__items { float: right; width: 400px; margin-top: 45px; *zoom: 1; }
 .specs__items:after { content: " "; display: table; clear: both; }
-.specs__items .items__scrollbar { height: 355px; overflow: auto; }
-.specs__items .items__scrollbar::-webkit-scrollbar { width: 4px; }
-.specs__items .items__scrollbar::-webkit-scrollbar-thumb { background: #1d1d1d; }
-.specs__items .items__scrollbar::-webkit-scrollbar-track { background: #ffffff; width: 2px; }
+.specs__items .items__scrollbar { height: 355px; overflow: hidden; position: relative; }
 .specs__items-caption { font-family: "georgiaitalic"; font-size: 24px; color: #be781e; font-weight: normal; }
 .specs__item { display: block; width: 360px; }
 .specs__item h3 { font-size: 18px; font-family: "Conv_PFDinTextCondPro-Light"; font-weight: normal; font-style: normal; color: #1e1e1e; text-transform: uppercase; }
@@ -167,10 +170,10 @@ header .header__main--main .header__right:after, .scrollMenu .header__main--main
 .history__watch img { width: 360px; height: 530px; }
 .history__watch .history__text-degree { position: absolute; top: 65px; left: -55px; width: 160px; height: 110px; z-index: 100; }
 .history__watch .history__text-degree span { position: relative; font-family: "pf_highway_sans_prothin"; font-weight: normal; font-style: normal; font-size: 24px; line-height: 1em; letter-spacing: 3px; padding-left: 50px; display: inline-block; }
-.history__watch .history__text-degree span:before { position: absolute; content: ""; top: 8px; left: 0; background: url('../img/icons-s42ad3593b7.png') 0 0 no-repeat; width: 41px; height: 41px; }
+.history__watch .history__text-degree span:before { position: absolute; content: ""; top: 8px; left: 0; background: url('../img/icons-sef19b2065e.png') 0 0 no-repeat; width: 41px; height: 41px; }
 .history__watch .history__text-degree p { font-size: 14px; color: #5a5a5a; font-family: "conv_pfdintextcondpro-lightital"; width: 125px; }
-.history__watch .prev { position: absolute; left: -50px; top: 240px; content: ""; cursor: pointer; background: url('../img/icons-s42ad3593b7.png') 0 -230px no-repeat; width: 40px; height: 40px; }
-.history__watch .next { position: absolute; right: -50px; top: 240px; content: ""; cursor: pointer; background: url('../img/icons-s42ad3593b7.png') 0 -120px no-repeat; width: 40px; height: 40px; }
+.history__watch .prev { position: absolute; left: -50px; top: 240px; content: ""; cursor: pointer; background: url('../img/icons-sef19b2065e.png') 0 -170px no-repeat; width: 40px; height: 40px; }
+.history__watch .next { position: absolute; right: -50px; top: 240px; content: ""; cursor: pointer; background: url('../img/icons-sef19b2065e.png') 0 -120px no-repeat; width: 40px; height: 40px; }
 
 .our { background: url(../img/our_bg.png) center no-repeat; -moz-background-size: cover; -o-background-size: cover; -webkit-background-size: cover; background-size: cover; height: 500px; margin-top: 25px; padding-top: 60px; position: relative; *zoom: 1; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; -moz-box-shadow: 0 16px 21px -11px #000000; -webkit-box-shadow: 0 16px 21px -11px #000000; box-shadow: 0 16px 21px -11px #000000; }
 .our:after { content: " "; display: table; clear: both; }
@@ -207,7 +210,7 @@ header .header__main--main .header__right:after, .scrollMenu .header__main--main
 .reviews .review__item { -moz-background-clip: padding; -o-background-clip: padding-box; -webkit-background-clip: padding; background-clip: padding-box; width: 300px; position: relative; display: inline-block; margin-right: 45px; -moz-border-radius: 8px; -webkit-border-radius: 8px; border-radius: 8px; -moz-background-clip: padding; -o-background-clip: padding-box; -webkit-background-clip: padding; background-clip: padding-box; background-color: #efefef; padding: 23px 18px; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; *zoom: 1; }
 .reviews .review__item:after { content: " "; display: table; clear: both; }
 .reviews .review__item:last-child { margin-right: 0; }
-.reviews .review__item:after { position: absolute; content: ""; bottom: -37px; left: 20px; background: url('../img/icons-s42ad3593b7.png') 0 -280px no-repeat; width: 54px; height: 45px; }
+.reviews .review__item:after { position: absolute; content: ""; bottom: -37px; left: 20px; background: url('../img/icons-sef19b2065e.png') 0 -220px no-repeat; width: 54px; height: 45px; }
 .reviews .review__item h3 { color: #be781e; font-family: "georgiaitalic"; font-weight: normal; margin-bottom: 18px; }
 .reviews .review__item p { font-family: "Conv_PFDinTextCondPro-Light"; font-weight: normal; font-style: normal; color: #3c3c3c; font-size: 16px; }
 
