--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -63,7 +63,20 @@ input, textarea
   text-transform: uppercase
   line-height: 1em
 
-
+.ps-scrollbar-x-rail
+  display: none !important
+.ps-scrollbar-y-rail
+  opacity: 1 !important
+  +border-radius(0)
+  border-radius: 0px !important
+  background: #ffffff !important
+  width: 2px !important
+  color: #fff !important
+.ps-scrollbar-y
+  background: #000 !important
+  width: 4px !important
+  +border-radius(0)
+  border-radius: 0px !important
 header
   background: url(../img/header_bg.jpg) center center no-repeat
   +background-size(cover)
@@ -238,15 +251,16 @@ header
     margin-top: 45px
     +clr
     .items__scrollbar
-      +scrollbar
-        width: 4px
-      +scrollbar-thumb
-        background: #1d1d1d
-      +scrollbar-track
-        background: #ffffff
-        width: 2px
+      //+scrollbar
+      //  width: 4px
+      //+scrollbar-thumb
+      //  background: #1d1d1d
+      //+scrollbar-track
+      //  background: #ffffff
+      //  width: 2px
       height: 355px
-      overflow: auto
+      overflow: hidden
+      position: relative
   &__items-caption
     font-family: 'georgiaitalic'
     font-size: 24px
